@@ -13,6 +13,8 @@ lookup_table(name="{{f_reputation_ctx.reputation_ctx.filename}}" file="{{f_reput
 {% endfor %}
 
 
+{{ frontend.pre_ruleset }}
+
 ruleset(name="{{ frontend.ruleset_name }}" queue.workerThreads="{{ frontend.nb_workers }}") {
 
     set $!frontend_name = "{{frontend.name}}";
