@@ -6,6 +6,8 @@
 ########################## WARNING ###############################
 
 
+{{ frontend.pre_ruleset }}
+
 ruleset(name="{{ frontend.ruleset_name }}") {
 
     set $!frontend_name = "{{frontend.name}}";
