@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## Unreleased
 ### Added
 - [LOG_FORWARDER] [REDIS] Support for queues, sets, publish and streams modes for log insertion
+- [LOGOMELASTICSEARCH] Handle log insertion errors returned by elasticsearch
 
 
 ## [2.15.0] - 2024-03-04
